Fix unspecified dockerfile

--- a/.github/workflows/npflan-ci.yml
+++ b/.github/workflows/npflan-ci.yml
@@ -32,5 +32,6 @@ jobs:
         uses: docker/build-push-action@v2
         with:
           context: .
+          file: DockerfileFull
           push: true
           tags: npflan/g5v:${{ steps.date.outputs.date }}
